deployments/kustomize/meshed-todos/base_app.yaml
---
##################################################################################################
# user service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  ports:
    - port: 4096
  selector:
    app: user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
      version: v1
  template:
    metadata:
      labels:
        app: user
        version: v1
    spec:
      serviceAccountName: todos-pod
      containers:
        - name: user
          image: aparihar/todos-user-microsvc-v2:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4096
          resources:
            limits:
              cpu: 256m
              memory: 512Mi
            requests:
              cpu: 256m
              memory: 300Mi
---
##################################################################################################
# group service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: group
spec:
  ports:
    - port: 5096
  selector:
    app: group
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group
      version: v1
  template:
    metadata:
      labels:
        app: group
        version: v1
    spec:
      serviceAccountName: todos-pod
      containers:
        - name: group
          image: aparihar/todos-group-microsvc-v2:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5096
          resources:
            limits:
              cpu: 256m
              memory: 512Mi
            requests:
              cpu: 256m
              memory: 300Mi
---
##################################################################################################
# task service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: task
spec:
  ports:
    - port: 6096
  selector:
    app: task
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task
      version: v1
  template:
    metadata:
      labels:
        app: task
        version: v1
    spec:
      serviceAccountName: todos-pod
      containers:
        - name: task
          image: aparihar/todos-task-microsvc-v2:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6096
          resources:
            limits:
              cpu: 256m
              memory: 512Mi
            requests:
              cpu: 256m
              memory: 300Mi
---
##################################################################################################
# progress
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: progress
spec:
  ports:
    - port: 7096
  selector:
    app: progress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: progress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: progress
      version: v1
  template:
    metadata:
      labels:
        app: progress
        version: v1
    spec:
      serviceAccountName: todos-pod
      containers:
        - name: progress
          image: aparihar/todos-progress-tracker-microsvc-v2:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7096
          resources:
            limits:
              cpu: 512m
              memory: 1024Mi
            requests:
              cpu: 200m
              memory: 512Mi
---
##################################################################################################
# database service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      version: v1
  template:
    metadata:
      labels:
        app: mysql
        version: v1
    spec:
      serviceAccountName: todos-pod
      containers:
        - name: mysql
          image: aparihar/todos-mysql-db-microsvc:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          resources:
            limits:
              cpu: 1024m
              memory: 2048Mi
            requests:
              cpu: 1024m
              memory: 1024Mi
---
