deployments/kustomize/meshed-todos/meshed_app.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: database-vs
spec:
  awsName: mysql.todos.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: database-vn
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: user-vs
spec:
  awsName: user.todos.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: user-vr
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: group-vs
spec:
  awsName: group.todos.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: group-vr
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: task-vs
spec:
  awsName: task.todos.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: task-vr
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: progress-vs
spec:
  awsName: progress.todos.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: progress-vn
    virtualRouter:
      virtualRouterRef:
        name: progress-vr
